Use static imports for `Collections.singletonList`
Signed-off-by: currantw <taylor.curran@improving.com>