@@ -5,6 +5,8 @@
 
 package org.opensearch.sql.expression.function;
 
+import static java.util.Collections.emptyList;
+import static java.util.Collections.singletonList;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.mockito.ArgumentMatchers.any;
@@ -24,7 +26,6 @@ import static org.opensearch.sql.data.type.ExprCoreType.UNDEFINED;
 import static org.opensearch.sql.expression.function.BuiltinFunctionName.CAST_TO_BOOLEAN;
 
 import com.google.common.collect.ImmutableList;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import org.apache.commons.lang3.StringUtils;
@@ -97,7 +98,7 @@ class BuiltinFunctionRepositoryTest {
 
     repo.compile(
         functionProperties,
-        Collections.singletonList(dataSourceFunctionResolver),
+        singletonList(dataSourceFunctionResolver),
         mockFunctionName,
         List.of(mockExpression));
     verify(functionExpressionBuilder, times(1)).apply(eq(functionProperties), any());
@@ -115,8 +116,7 @@ class BuiltinFunctionRepositoryTest {
     BuiltinFunctionRepository repo = new BuiltinFunctionRepository(mockMap);
     repo.register(mockfunctionResolver);
 
-    assertEquals(
-        functionExpressionBuilder, repo.resolve(Collections.emptyList(), functionSignature));
+    assertEquals(functionExpressionBuilder, repo.resolve(emptyList(), functionSignature));
   }
 
   @Test
@@ -124,7 +124,7 @@ class BuiltinFunctionRepositoryTest {
     when(mockExpression.toString()).thenReturn("string");
     FunctionImplementation function =
         repo.resolve(
-                Collections.emptyList(),
+                emptyList(),
                 registerFunctionResolver(CAST_TO_BOOLEAN.getName(), TIMESTAMP, BOOLEAN))
             .apply(functionProperties, ImmutableList.of(mockExpression));
     assertEquals("cast_to_boolean(string)", function.toString());
@@ -135,8 +135,7 @@ class BuiltinFunctionRepositoryTest {
     when(mockFunctionName.getFunctionName()).thenReturn("mock");
     when(mockExpression.toString()).thenReturn("string");
     FunctionImplementation function =
-        repo.resolve(
-                Collections.emptyList(), registerFunctionResolver(mockFunctionName, STRING, STRING))
+        repo.resolve(emptyList(), registerFunctionResolver(mockFunctionName, STRING, STRING))
             .apply(functionProperties, ImmutableList.of(mockExpression));
     assertEquals("mock(string)", function.toString());
   }
@@ -146,8 +145,7 @@ class BuiltinFunctionRepositoryTest {
     when(mockFunctionName.getFunctionName()).thenReturn("mock");
     when(mockExpression.toString()).thenReturn("byte");
     FunctionImplementation function =
-        repo.resolve(
-                Collections.emptyList(), registerFunctionResolver(mockFunctionName, BYTE, INTEGER))
+        repo.resolve(emptyList(), registerFunctionResolver(mockFunctionName, BYTE, INTEGER))
             .apply(functionProperties, ImmutableList.of(mockExpression));
     assertEquals("mock(byte)", function.toString());
   }
@@ -162,7 +160,7 @@ class BuiltinFunctionRepositoryTest {
     registerFunctionResolver(CAST_TO_BOOLEAN.getName(), STRING, STRING);
 
     FunctionImplementation function =
-        repo.resolve(Collections.emptyList(), signature)
+        repo.resolve(emptyList(), signature)
             .apply(functionProperties, ImmutableList.of(mockExpression));
     assertEquals("mock(cast_to_boolean(string))", function.toString());
   }
@@ -173,9 +171,7 @@ class BuiltinFunctionRepositoryTest {
         assertThrows(
             ExpressionEvaluationException.class,
             () ->
-                repo.resolve(
-                        Collections.emptyList(),
-                        registerFunctionResolver(mockFunctionName, BYTE, STRUCT))
+                repo.resolve(emptyList(), registerFunctionResolver(mockFunctionName, BYTE, STRUCT))
                     .apply(functionProperties, ImmutableList.of(mockExpression)));
     assertEquals(error.getMessage(), "Type conversion to type STRUCT is not supported");
   }
@@ -192,8 +188,7 @@ class BuiltinFunctionRepositoryTest {
             ExpressionEvaluationException.class,
             () ->
                 repo.resolve(
-                    Collections.emptyList(),
-                    new FunctionSignature(FunctionName.of("unknown"), List.of())));
+                    emptyList(), new FunctionSignature(FunctionName.of("unknown"), List.of())));
     assertEquals("unsupported function name: unknown", exception.getMessage());
   }
 
